; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_zone.c_zone_realloc.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_zone.c_zone_realloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@config_prof = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*, i64)* @zone_realloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @zone_realloc(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = load i32, i32* @config_prof, align 4
  %10 = call i64 @ivsalloc(i8* %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = load i64, i64* %7, align 8
  %15 = call i8* @je_realloc(i8* %13, i64 %14)
  store i8* %15, i8** %4, align 8
  br label %20

16:                                               ; preds = %3
  %17 = load i8*, i8** %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = call i8* @realloc(i8* %17, i64 %18)
  store i8* %19, i8** %4, align 8
  br label %20

20:                                               ; preds = %16, %12
  %21 = load i8*, i8** %4, align 8
  ret i8* %21
}

declare dso_local i64 @ivsalloc(i8*, i32) #1

declare dso_local i8* @je_realloc(i8*, i64) #1

declare dso_local i8* @realloc(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
